Fixes, new configs, notifications, a bit more functionality

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true,
     "paths": {
       "@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"],
       "@/*": [
@@ -10,6 +9,7 @@
     }
   },
   "include": [
+    "firebase-auth-react-native.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
