--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "HabitBuilder",
-    "slug": "HabitBuilder",
+    "name": "habitbuilder",
+    "slug": "habitbuilder",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -13,6 +13,7 @@
     },
     "android": {
       "adaptiveIcon": {
+        "useNextNotificationsApi": true,
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
